--- a/MoviesFromImdb/Properties/Resources.resx
+++ b/MoviesFromImdb/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="IMDB_Logo_2016" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\IMDB_Logo_2016.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="WhatsApp-logo" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\WhatsApp-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
